# Simulators

./: README.md  pyproject.toml
src/simulators/parabolic_drop/: arcing_shot.py
