[tool.poetry]
name = "simulators"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^2.1.4"
pyside6 = "^6.6.1"
pyqtgraph = "^0.13.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
